# SCavenger

./: Makefile  README.md  accelerometer.c  accelerometer.h  altimeter.c  altimeter.h  buzz.c  buzz.h  esp.c  esp.h  gps.c  gps.h  lcd-test  lcd-test.elf  lcd-test.hex  lcd.c  led.c  led.h  light_sensor.c  light_sensor.h  main.c  main.elf  main.h  main.hex  solenoid.c  solenoid.h
acc/: main.c  main.elf  main.hex
altimeter/: alt_test.c  lcd.h  main.c
buzzer/: buzz.c
esp/: sdkconfig.old
esp_flashing/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp_flashing/main/: CMakeLists.txt  esp_test_main.c  isrg_root_x1.pem
gps/: Makefile  gps-dummy.c  gps-test.c  main.elf  main.hex
lcd/: Makefile  lcd-test.c  main.elf  main.hex
light_sensor/: Makefile  i2c-scan.elf  i2c-scan.hex  i2c.h  lcd.c  light.c  light.elf  light.hex  main.c  main.elf  main.hex  tsl-id-check.elf  tsl-id-check.hex  tsl-led-test.elf  tsl-led-test.hex
rtc/: rtc_test.c
weber-code/: lcd-test.c  main.hex
weber-code/lcd/: main.elf
